# ap-linux-talk-snippets

./: README.md
1-compile-intro/library-cpp/: main.c
2-build-system/cmake/depends/: CMakeLists.txt  hello.c  hello.h  main.c
2-build-system/cmake/program/: CMakeLists.txt
2-build-system/makefile/: Makefile
2-build-system/qbs/: hello.h  hello.pro
2-build-system/script/: build  hello.cpp
3-system-api/files/: Makefile  main.c
3-system-api/processes/: Makefile  main.c
3-system-api/syslog/: Makefile  main.c
4-gui/gtk/: CMakeLists.txt  main.c
4-gui/qt/: MainWindow.cpp  MainWindow.h  example.pro  main.cpp
4-gui/x11/: Makefile  main.c
